Bug 277285 - REGRESSION (280925@main): [ macOS iOS ] TestWebKitAPI.WebKit2_WeakObjCPtr.LogicalNegation is a constant failure.
Summary: REGRESSION (280925@main): [ macOS iOS ] TestWebKitAPI.WebKit2_WeakObjCPtr.Log...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Extensions (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Timothy Hatcher
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-07-29 14:50 PDT by Anfernee Viduya
Modified: 2024-08-02 15:49 PDT (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anfernee Viduya 2024-07-29 14:50:13 PDT
TestWebKitAPI.WebKit2_WeakObjCPtr.LogicalNegation is a constant failure for sometime now. 

HISTORY:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit2_WeakObjCPtr.LogicalNegation

BUILD BOT URL:
https://build.webkit.org/#/builders/947/builds/4884/steps/19/logs/stdio

CRASH LOG:
Value of: !weak
 Actual: false
Expected: true

DESCRIPTION: 
In 280924@main, changes were made in WeakObjCPtr.h, which is causing this regression.
Comment 1 Radar WebKit Bug Importer 2024-07-29 14:50:25 PDT
<rdar://problem/132755490>
Comment 2 Anfernee Viduya 2024-07-29 14:51:54 PDT
REPRODUCIBILITY: 
I was able to reproduce the regression on ToT using the command

run-webkit-tests TestWebKitAPI.WebKit2_WeakObjCPtr.LogicalNegation  --debug -v
Comment 3 Brian Weinstein 2024-07-29 14:53:42 PDT
Is that the right commit? I don't see any changes to WeakObjCPtr.h in 280924.
Comment 4 Brian Weinstein 2024-07-29 14:54:33 PDT
(In reply to Brian Weinstein from comment #3)
> Is that the right commit? I don't see any changes to WeakObjCPtr.h in 280924.

I think it was meant to be 280925.
Comment 5 Anfernee Viduya 2024-07-29 14:55:20 PDT
(In reply to Brian Weinstein from comment #4)
> (In reply to Brian Weinstein from comment #3)
> > Is that the right commit? I don't see any changes to WeakObjCPtr.h in 280924.
> 
> I think it was meant to be 280925.

Yes, my mistake, updating bug accordingly
Comment 6 Anfernee Viduya 2024-07-29 15:01:09 PDT
(In reply to Anfernee Viduya from comment #0)
> DESCRIPTION: 
> In 280924@main, changes were made in WeakObjCPtr.h, which is causing this
> regression.

I meant to list 280925@main instead of 280924@main.
Comment 7 Timothy Hatcher 2024-07-30 11:01:16 PDT
Pull request: https://github.com/WebKit/WebKit/pull/31482
Comment 8 EWS 2024-07-30 11:15:13 PDT
Committed 281582@main (9619df3a01b1): <https://commits.webkit.org/281582@main>

Reviewed commits have been landed. Closing PR #31482 and removing active labels.
Comment 9 EWS 2024-08-02 15:49:38 PDT
Committed 280938.176@safari-7619-branch (dd204be75d92): <https://commits.webkit.org/280938.176@safari-7619-branch>

Reviewed commits have been landed. Closing PR #1542 and removing active labels.