REGRESSION (280925@main): [ macOS iOS ] TestWebKitAPI.WebKit2_WeakObjCPtr.LogicalNegation is a constant failure. https://webkit.org/b/277285 rdar://problem/132755490

Reviewed by Brian Weinstein.

Revert the WeakObjCPtr changes of 280925@main. The autorelease pool was retaining the object past the
scope of the WeakObjCPtr in the LogicalNegation test, keeping it non-nil longer than expected.

* Source/WTF/wtf/WeakObjCPtr.h:
(WTF::WeakObjCPtr::operator! const): Switch back to get().
(WTF::WeakObjCPtr::operator bool const): Ditto.

Canonical link: https://commits.webkit.org/281582@main